i can't match colors LOL

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,14 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
+  background-color: #D3BCA0;
   color: #272829;
-  background-color: #C49A7A;
+ /* background-color: #C49A7A;*/
  /* background-color: #EDC7B7;*/
 }
 
 a {
-  color: #BE969A;
+  color: #613957;
   text-decoration: none;
 }
 
@@ -27,6 +28,7 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
+
 }
 
 /*--------------------------------------------------------------
@@ -192,7 +194,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .nav-menu a:hover, .nav-menu .active, .nav-menu .active:focus, .nav-menu li:hover > a {
   color: #fff;
-  background: #b88bbe;
+  background: #F5C1CF;
 }
 .nav-menu a:hover span, .nav-menu .active span, .nav-menu .active:focus span, .nav-menu li:hover > a span {
   color: #fff;
