--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/photo-03.jpg") top right no-repeat;
+  background: url("../img/uw2023.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
